RestAndGrpcApp/config/envoy-conf.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:9211",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "access_log": [
              {
                "path": "/var/log/envoy/ingress_http.log"
              }
            ],
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "local_service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "headers": [
                        {
                          "name": "content-type",
                          "value": "application/grpc"
                        }
                      ],
                      "cluster": "local_grpc_endpont"
                    },
                    {
                      "prefix": "/",                    
                      "cluster": "local_kestrel_endpoint"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/var/log/envoy/admin_access.log",
    "address": "tcp://0.0.0.0:9901"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "local_grpc_endpont",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "features": "http2",
        "hosts": [
          {
            "url": "tcp://dotnetapp:5000"
          }
        ]
      },
      {
        "name": "local_kestrel_endpoint",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://dotnetapp:4999"
          }
        ]
      }
    ]
  }
}
